--- a/prod/service.yaml
+++ b/prod/service.yaml
@@ -1,14 +1,14 @@
-apiVersion: v1
-kind: Service
-metadata:
-  name: calculator-api
-  namespace: production
-spec:
-  type: ClusterIP
-  selector:
+apiVersion: v1                      # 1️⃣ API version - core Kubernetes API for Service
+kind: Service                      # 2️⃣ Kind - Service resource
+metadata:                         # 3️⃣ Metadata - basic info about Service
+  name: calculator-api            # - Service name
+  namespace: production           # - Namespace where Service is created
+spec:                            # 4️⃣ Spec - desired state of the Service
+  type: ClusterIP                # - Service type (ClusterIP is default; internal cluster access)
+  selector:                     # - Select pods with these labels to route traffic to
     app: calculator-api
-  ports:
-    - port: 80
-      targetPort: 3000
-      protocol: TCP
-      name: http
+  ports:                        # - List of ports the Service exposes
+    - port: 80                 # - Port Service exposes inside the cluster
+      targetPort: 3000         # - Port on the container to forward traffic to
+      protocol: TCP            # - Protocol used (TCP by default)
+      name: http               # - Named port (useful for protocols and multiple ports)
